# ipyclipboard

./: .gitignore  CHANGELOG.md  README.md  deno.json  example.ipynb  package-lock.json  package.json  pyproject.toml
.github/workflows/: check-release.yml  deploy.yml  prep-release.yml
demo/: build-environment.yml  environment.yml
js/: widget.js
src/ipyclipboard/: __init__.py
src/ipyclipboard/static/: widget.css  widget.js
