[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyclipboard"
dependencies = ["anywidget"]
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

[tool.hatch.version]
path = "src/ipyclipboard/__about__.py"

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyclipboard/static/*"]
